--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,88 @@
+attrs==23.2.0
+blinker==1.7.0
+Brotli==1.1.0
+cachetools==5.3.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.2
+easyocr==1.7.1
+fake-useragent==1.3.0
+filelock==3.13.1
+fsspec==2024.2.0
+google-api-core==2.16.2
+google-api-python-client==2.116.0
+google-auth==2.27.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.62.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httplib2==0.22.0
+hyperframe==6.0.1
+idna==3.6
+imageio==2.34.0
+Jinja2==3.1.3
+kaitaistruct==0.10
+lazy_loader==0.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.2.1
+ninja==1.11.1.1
+numpy==1.26.4
+oauth2client==4.1.3
+opencv-python-headless==4.9.0.80
+outcome==1.3.0.post0
+packaging==23.2
+pandas==1.3.5
+pillow==10.2.0
+protobuf==4.25.2
+psycopg2==2.9.9
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyclipper==1.3.0.post5
+pycparser==2.21
 PyDrive==1.3.1
 pynput==1.7.6
-tqdm==4.64.0
-pandas==1.3.5
-webdriver-manager==4.0.1
-undetected-chromedriver==3.5.3
-selenium==4.11.2
-urllib3==1.26.13
-psycopg2==2.9.9
-SQLAlchemy==2.0.25
-fake-useragent==1.3.0
-smsactivate==1.5
+pyobjc-core==10.1
+pyobjc-framework-ApplicationServices==10.1
+pyobjc-framework-Cocoa==10.1
+pyobjc-framework-CoreText==10.1
+pyobjc-framework-Quartz==10.1
+pyOpenSSL==24.0.0
+pyparsing==3.1.1
 pyperclip==1.8.2
-easyocr==1.7.1
+PySocks==1.7.1
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rsa==4.9
+scikit-image==0.22.0
+scipy==1.12.0
+selenium==4.11.2
+selenium-wire==5.1.0
+setuptools==69.1.1
+shapely==2.0.3
+six==1.16.0
+smsactivate==1.5
+sniffio==1.3.0
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.25
+sympy==1.12
+tifffile==2024.2.12
+torch==2.2.1
+torchvision==0.17.1
+tqdm==4.64.0
+trio==0.24.0
+trio-websocket==0.11.1
+typing_extensions==4.9.0
+undetected-chromedriver==3.5.3
+uritemplate==4.1.1
+urllib3==1.26.13
+webdriver-manager==4.0.1
+websockets==12.0
+wsproto==1.2.0
+zstandard==0.22.0
